fix reactive overflow problem

--- a/style.css
+++ b/style.css
@@ -43,10 +43,6 @@
 
 
 /* ======================================= */
-.responsive {
-  width: auto;
-  height: auto;
-}
 
 #topleft {
   border-radius: 5% 45% ;
@@ -60,7 +56,4 @@ footer {
 }
 .carduxg {
   border-radius: 25%;
-}
-section {
-  padding: 5rem;
 }
